2013-05-04  Paul Smith  <psmith@gnu.org>

	* job.c (pump_from_tmp): (Rename) Write to stdout/stderr using
	FILE* rather than fd.  It's not a good idea to mix and match.

2013-05-04  Eli Zaretskii  <eliz@gnu.org>

	* makeint.h (ftruncate) [_MSC_VER]: Redirect to _chsize.
	(_S_ISDIR): If not defined (MinGW64), define to S_ISDIR.

2013-05-04  Paul Smith  <psmith@gnu.org>

	* job.c (child_out): Handle EINTR and incomplete write scenarios.
	(sync_init): New function: separate the initialization code.
	(assign_child_tempfiles): Remove truncation from this function,
	(sync_output): and add it here after output is generated.
	(reap_children): Always call sync_output() in case output_sync was
	reset after the child started, due to error.
	(start_job_command): Create new sync_cmd variable.  Use new method
	for initializing the handle.
	If we're not syncing the output be sure any output we've saved is
	dumped immediately before starting the child.

2013-05-04  Eli Zaretskii  <eliz@gnu.org>

	* job.c (start_job_command): Make the condition for creating a
	temporary output file be identical to the Posix code branch.
	Suggested by Frank Heckenbach <f.heckenbach@fh-soft.de>.

2013-05-03  Eli Zaretskii  <eliz@gnu.org>

	* w32/subproc/sub_proc.c: Include makeint.h.  Remove a private
	incompatible prototype of xmalloc.
	(batch_file_with_spaces): New function, detects Windows batch
	files whose names include whitespace characters.
	(process_begin): If exec_name is a batch file with whitespace
	characters in its name, pass NULL as the first argument to
	CreateProcess.  This avoids weird failures due to buggy quoting by
	CreateProcess.  For the details, see the discussion starting at
	http://lists.gnu.org/archive/html/make-w32/2013-04/msg00008.html.

	* load.c (load_object, load_file): Accept an additional argument
	DLP and return in it a pointer that can be used to unload the
	dynamic object.

	* read.c (eval): Call load_file with an additional argument, and